# bookmark_notification_service

./: Cargo.toml
src/: main.rs
src/handlers/: email.rs  handler.rs  mod.rs
templates/: sign-up.hbs
