[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bookmark_server = { git = "https://github.com/opeolluwa/bookmark_backend", version = "0.1.0" }
json-value = "0.3.3"
kafka = "0.10.0"
lettre = "0.11.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
