[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
bookmark_server = { git = "https://github.com/opeolluwa/bookmark_backend", version = "0.1.0" }
handlebars = { version = "6.2.0", features = ["rust-embed"] }
json-value = "0.3.3"
kafka = "0.10.0"
lazy_static = "1.5.0"
lettre = "0.11.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
